--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,15 @@ dependencies:
   cupertino_icons: ^1.0.6
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.14.1
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo.png"
+  
 flutter:
   uses-material-design: true
