--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <!-- Required permissions for voice navigation -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+
     <application
         android:label="Ig Care"
         android:name="${applicationName}"
@@ -31,6 +38,4 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
-    <!-- Required permissions -->
-    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
