--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,27 +10,33 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # Voice navigation dependencies
+  speech_to_text: ^7.3.0
+  flutter_tts: ^4.2.3
+  permission_handler: ^12.0.1
+
   # UI and Styling
   google_fonts: ^6.1.0
   flutter_staggered_animations: ^1.1.1
 
   # Firebase Core (Required)
   firebase_core: ^3.6.0
-  
+
   # Optional but useful
   firebase_analytics: ^11.3.3
   firebase_auth: ^5.3.1      # Authentication
   cloud_firestore: ^5.4.4
   shared_preferences: ^2.3.2
+
   # Charts
   fl_chart: ^0.68.0
-  
+
   # State Management
   provider: ^6.1.2
-  
+
   # Utilities
   intl: ^0.19.0
-  
+
   # Icons
   cupertino_icons: ^1.0.6
 
@@ -44,6 +50,6 @@ flutter_icons:
   android: true
   ios: true
   image_path: "assets/images/logo.png"
-  
+
 flutter:
   uses-material-design: true
